Time: 24 ms (98.34%) | Memory: 51.7 MB (40.50%) - LeetSync