@@ -1,23 +1,37 @@
 class Solution {
     public List<List<Integer>> threeSum(int[] nums) {
-        Set<List<Integer>> result = new HashSet<>();
-        //Arrays.sort(nums);
+        Arrays.sort(nums);
+        List<List<Integer>> result = new ArrayList<>();
+        for (int i = 0; i < nums.length - 2 && nums[i] <= 0; i++) {
+            if (i > 0 && nums[i] == nums[i - 1]) {
+                continue;
+            }
 
-        for (int i = 0; i < nums.length - 2; i++){
-            Set<Integer> checker = new HashSet<>();
-            for (int j = i + 1; j < nums.length; j++){
-                int sum = -nums[i] - nums[j];
+            int left = i + 1;
+            int right = nums.length - 1;
+            while (left < right) {
+                int sum = nums[i] + nums[left] + nums[right];
 
-                if (checker.contains(sum)){
-                    List<Integer> triplet = Arrays.asList(nums[i], nums[j], sum);
-                    Collections.sort(triplet);
-                    result.add(triplet);
+                if (sum < 0) {
+                    left++;
+                } else if (sum > 0) {
+                    right--;
+                } else {
+                    result.add(List.of(nums[i], nums[left], nums[right]));
+                    left++;
+                    right--;
+
+                    while (left < right && nums[left] == nums[left - 1]) {
+                        left++;
+                    }
+                    while (left < right && nums[right] == nums[right + 1]) {
+                        right--;
+                    }
                 }
 
-                checker.add(nums[j]);
-
             }
+
         }
-        return new LinkedList<>(result);
+        return result;
     }
 }
